[gd_scene load_steps=8 format=3 uid="uid://ckhonoru1lr30"]

[ext_resource type="Script" uid="uid://ccbhuab2udoxi" path="res://Scripts/GUI/GUIHandler.gd" id="1_bpa6r"]
[ext_resource type="Script" uid="uid://bnhepvigy3lgy" path="res://Scripts/GUI/HUDHandler.gd" id="2_amv3e"]
[ext_resource type="FontFile" uid="uid://b3qdsvlys0nie" path="res://Font/Hack/HackNerdFont-Bold.ttf" id="3_mggr0"]
[ext_resource type="Script" uid="uid://du6r84g6vxhun" path="res://Scripts/GUI/PauseMenu.gd" id="3_xt740"]
[ext_resource type="Script" uid="uid://0p7a04xkgrni" path="res://Scripts/GUI/CompleteScreen.gd" id="4_eyhwi"]
[ext_resource type="Theme" uid="uid://52q2djqhq2lm" path="res://btnTheme.tres" id="5_wcsj4"]
[ext_resource type="FontFile" uid="uid://c6dqx0n3h2gdb" path="res://Font/Hack/HackNerdFont-Regular.ttf" id="7_5ke0w"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InGameUI" type="CanvasLayer" parent="."]
script = ExtResource("1_bpa6r")

[node name="HUD" type="Control" parent="InGameUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_amv3e")

[node name="ColorRect" type="ColorRect" parent="InGameUI/HUD"]
layout_mode = 0
offset_top = 608.0
offset_right = 158.0
offset_bottom = 648.0
color = Color(0.454902, 0.780392, 0.92549, 1)

[node name="CenterContainer" type="CenterContainer" parent="InGameUI/HUD/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ModeLabel" type="Label" parent="InGameUI/HUD/ColorRect/CenterContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_mggr0")
theme_override_font_sizes/font_size = 24
text = "?"

[node name="SaveLabel" type="Label" parent="InGameUI/HUD"]
texture_filter = 1
layout_mode = 0
offset_left = 13.0
offset_top = 11.0
offset_right = 53.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0.796078, 0.65098, 0.968627, 1)
theme_override_fonts/font = ExtResource("3_mggr0")
theme_override_font_sizes/font_size = 24
text = "?"

[node name="Timer" type="Label" parent="InGameUI/HUD"]
texture_filter = 1
offset_left = 6.0
offset_top = 584.0
offset_right = 46.0
offset_bottom = 603.0
theme_override_colors/font_color = Color(0.65098, 0.890196, 0.631373, 1)
theme_override_fonts/font = ExtResource("3_mggr0")
theme_override_font_sizes/font_size = 16
text = "?"

[node name="PauseScreen" type="Control" parent="InGameUI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("3_xt740")

[node name="ColorRect" type="ColorRect" parent="InGameUI/PauseScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0693, 0.0693, 0.11, 0.270588)

[node name="CenterContainer" type="CenterContainer" parent="InGameUI/PauseScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Border" type="ColorRect" parent="InGameUI/PauseScreen/CenterContainer"]
custom_minimum_size = Vector2(256, 306)
layout_mode = 2
color = Color(0.796078, 0.65098, 0.968627, 1)

[node name="CenterContainer" type="CenterContainer" parent="InGameUI/PauseScreen/CenterContainer/Border"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="InGameUI/PauseScreen/CenterContainer/Border/CenterContainer"]
custom_minimum_size = Vector2(250, 300)
layout_mode = 2
color = Color(0.0666667, 0.0666667, 0.105882, 1)

[node name="CenterContainer" type="CenterContainer" parent="InGameUI/PauseScreen/CenterContainer/Border/CenterContainer/ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InGameUI/PauseScreen/CenterContainer/Border/CenterContainer/ColorRect2/CenterContainer"]
custom_minimum_size = Vector2(150, 250)
layout_mode = 2

[node name="Label" type="Label" parent="InGameUI/PauseScreen/CenterContainer/Border/CenterContainer/ColorRect2/CenterContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0.796078, 0.65098, 0.968627, 1)
theme_override_fonts/font = ExtResource("3_mggr0")
theme_override_font_sizes/font_size = 32
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="InGameUI/PauseScreen/CenterContainer/Border/CenterContainer/ColorRect2/CenterContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_wcsj4")
text = "RESUME"
flat = true

[node name="RestartButton" type="Button" parent="InGameUI/PauseScreen/CenterContainer/Border/CenterContainer/ColorRect2/CenterContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_wcsj4")
text = "RESTART
"
flat = true

[node name="LevelsButton" type="Button" parent="InGameUI/PauseScreen/CenterContainer/Border/CenterContainer/ColorRect2/CenterContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_wcsj4")
text = "LEVELS"
flat = true

[node name="TitleButton" type="Button" parent="InGameUI/PauseScreen/CenterContainer/Border/CenterContainer/ColorRect2/CenterContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_wcsj4")
text = "TITLE"
flat = true

[node name="QuitButton" type="Button" parent="InGameUI/PauseScreen/CenterContainer/Border/CenterContainer/ColorRect2/CenterContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_wcsj4")
text = "QUIT"
flat = true

[node name="CompleteScreen" type="Control" parent="InGameUI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_eyhwi")

[node name="ColorRect" type="ColorRect" parent="InGameUI/CompleteScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0693, 0.0693, 0.11, 0.270588)

[node name="CenterContainer" type="CenterContainer" parent="InGameUI/CompleteScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Border" type="ColorRect" parent="InGameUI/CompleteScreen/CenterContainer"]
custom_minimum_size = Vector2(256, 306)
layout_mode = 2
color = Color(0.796078, 0.65098, 0.968627, 1)

[node name="CenterContainer" type="CenterContainer" parent="InGameUI/CompleteScreen/CenterContainer/Border"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="InGameUI/CompleteScreen/CenterContainer/Border/CenterContainer"]
custom_minimum_size = Vector2(250, 300)
layout_mode = 2
color = Color(0.0666667, 0.0666667, 0.105882, 1)

[node name="CenterContainer" type="CenterContainer" parent="InGameUI/CompleteScreen/CenterContainer/Border/CenterContainer/ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InGameUI/CompleteScreen/CenterContainer/Border/CenterContainer/ColorRect2/CenterContainer"]
custom_minimum_size = Vector2(150, 250)
layout_mode = 2

[node name="Complete" type="Label" parent="InGameUI/CompleteScreen/CenterContainer/Border/CenterContainer/ColorRect2/CenterContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.796078, 0.65098, 0.968627, 1)
theme_override_fonts/font = ExtResource("3_mggr0")
theme_override_font_sizes/font_size = 24
text = "COMPLETE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Time" type="Label" parent="InGameUI/CompleteScreen/CenterContainer/Border/CenterContainer/ColorRect2/CenterContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(0.65098, 0.890196, 0.631373, 1)
theme_override_fonts/font = ExtResource("7_5ke0w")
text = "TIME [00:00]"
horizontal_alignment = 1

[node name="NxtLvlBtn" type="Button" parent="InGameUI/CompleteScreen/CenterContainer/Border/CenterContainer/ColorRect2/CenterContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_wcsj4")
text = "NEXT LEVEL"
flat = true

[node name="RetryBtn" type="Button" parent="InGameUI/CompleteScreen/CenterContainer/Border/CenterContainer/ColorRect2/CenterContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_wcsj4")
text = "RETRY"
flat = true

[node name="LevelsBtn" type="Button" parent="InGameUI/CompleteScreen/CenterContainer/Border/CenterContainer/ColorRect2/CenterContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_wcsj4")
text = "LEVELS"
flat = true

[node name="TitleBtn" type="Button" parent="InGameUI/CompleteScreen/CenterContainer/Border/CenterContainer/ColorRect2/CenterContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_wcsj4")
text = "TITLE"
flat = true

[node name="QuitBtn" type="Button" parent="InGameUI/CompleteScreen/CenterContainer/Border/CenterContainer/ColorRect2/CenterContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_wcsj4")
text = "QUIT"
flat = true

[connection signal="pressed" from="InGameUI/PauseScreen/CenterContainer/Border/CenterContainer/ColorRect2/CenterContainer/VBoxContainer/ResumeButton" to="InGameUI/PauseScreen" method="_on_resume"]
[connection signal="pressed" from="InGameUI/PauseScreen/CenterContainer/Border/CenterContainer/ColorRect2/CenterContainer/VBoxContainer/RestartButton" to="InGameUI/PauseScreen" method="_on_restart"]
[connection signal="pressed" from="InGameUI/PauseScreen/CenterContainer/Border/CenterContainer/ColorRect2/CenterContainer/VBoxContainer/LevelsButton" to="InGameUI/PauseScreen" method="_on_levels"]
[connection signal="pressed" from="InGameUI/PauseScreen/CenterContainer/Border/CenterContainer/ColorRect2/CenterContainer/VBoxContainer/TitleButton" to="InGameUI/PauseScreen" method="_on_title"]
[connection signal="pressed" from="InGameUI/PauseScreen/CenterContainer/Border/CenterContainer/ColorRect2/CenterContainer/VBoxContainer/QuitButton" to="InGameUI/PauseScreen" method="_on_quit"]
[connection signal="pressed" from="InGameUI/CompleteScreen/CenterContainer/Border/CenterContainer/ColorRect2/CenterContainer/VBoxContainer/NxtLvlBtn" to="InGameUI/CompleteScreen" method="_on_nxt_lvl"]
[connection signal="pressed" from="InGameUI/CompleteScreen/CenterContainer/Border/CenterContainer/ColorRect2/CenterContainer/VBoxContainer/RetryBtn" to="InGameUI/CompleteScreen" method="_on_retry"]
[connection signal="pressed" from="InGameUI/CompleteScreen/CenterContainer/Border/CenterContainer/ColorRect2/CenterContainer/VBoxContainer/LevelsBtn" to="InGameUI/CompleteScreen" method="_on_levels"]
[connection signal="pressed" from="InGameUI/CompleteScreen/CenterContainer/Border/CenterContainer/ColorRect2/CenterContainer/VBoxContainer/TitleBtn" to="InGameUI/CompleteScreen" method="_on_title"]
[connection signal="pressed" from="InGameUI/CompleteScreen/CenterContainer/Border/CenterContainer/ColorRect2/CenterContainer/VBoxContainer/QuitBtn" to="InGameUI/CompleteScreen" method="_on_quit"]
